实现首页轮播图

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -11,8 +11,9 @@
         <item name="android:statusBarColor">?colorPrimaryDark</item>
     </style>
 
-    <style name="AppTheme" parent="Base.Theme.Home">
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+    <style name="AppTheme" parent="Theme.Design.Light.NoActionBar">
+        <item name="android:background">@null</item>
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 </resources>
