--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -11,9 +11,23 @@
         <item name="android:statusBarColor">?colorPrimaryDark</item>
     </style>
 
-    <style name="AppTheme" parent="Theme.Design.Light.NoActionBar">
-        <item name="android:background">@null</item>
+    <style name="AppTheme" parent="AppThemeBase">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowContentOverlay">@null</item>
+
+        <!-- AppCompatEditText默认状态状态设置底线颜色 -->
+        <item name="colorControlNormal">@color/text_hint</item>
+        <!-- AppCompatEditText选择的底线颜色 -->
+        <item name="colorControlActivated">@color/colorPrimary</item>
+
+        <item name="android:textColorHint">@color/text_hint</item>
+    </style>
+
+    <style name="MyButtonStyle" parent="android:Theme.Material.Light">
+        <item name="android:colorControlHighlight">@color/colorPrimaryDark</item>
+        <item name="android:colorButtonNormal">@color/colorPrimary</item>
     </style>
 </resources>
